syntax = "proto3";

package user;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc FindOne(UserById) returns (UserResponse);
  rpc FindUser (FindUserRequest) returns (LoginUserResponse);

}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  string phone = 5;
  string role = 6;
  bool isActive = 7;
  string profileImage = 8;
}

message UserById {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string phone = 5;
  string role = 6;
  bool isActive = 7;
  string profileImage = 8;
  string password = 9;
}


message LoginUserResponse {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string phone = 5;
  string role = 6;
  bool isActive = 7;
  string profileImage = 8;
  string password = 9;
}

message FindUserRequest {
   string email = 1;
}
